oci/grafana-public/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-public
  annotations:
    linkerd.io/inject: enabled
