oci/grafana-public/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-public
  namespace: grafana-public
spec:
  parentRefs:
    - name: grafana-public
      sectionName: https
  hostnames:
    - dashboards.altinn.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-public-service
          port: 3000
